tests/baselines/reference/taggedTemplateStringsWithUnicodeEscapes.errors.txt
tests/cases/compiler/taggedTemplateStringsWithUnicodeEscapes.ts(4,7): error TS1125: Hexadecimal digit expected.


==== tests/cases/compiler/taggedTemplateStringsWithUnicodeEscapes.ts (1 errors) ====
    function f(...args: any[]) {
    }
    
    f `'\u{1f4a9}'${ " should be converted to " }'\uD83D\uDCA9'`;
          
!!! error TS1125: Hexadecimal digit expected.